--- a/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
@@ -58,7 +58,7 @@
     },
     "mojichimera:GluttonousMod": {
         "TEXT": ["暴食", "", "首次打出时 #b随机 #y消耗 一张牌，每次打出本牌时将其一并打出。 NL 该效果只会将可打出的攻击或技能牌作为目标。"],
-        "EXTRA_TEXT": [" NL 首次打出时随机 消耗 一张牌，每次打出本牌时将其一并打出。", " NL 打出 %s 。"]
+        "EXTRA_TEXT": [" NL 首次打出时随机 消耗 一张牌，每次打出本牌时将其一并打出。", " NL 打出 *%s 。"]
     },
     "mojichimera:HeatsinksMod": {
         "TEXT": ["散热", "", "本牌耗能增加 #b1 ，变为 #y能力 牌。 NL 每打出一张 #y能力 牌，打出原牌的复制。"],
